# sophomoreYearWork

./: README.md
FileC/FileC/: a.out  filename.txt  filename.txt.hcz  huff.txt  huff2.txt  main.c  use.txt
FileC/FileC.xcodeproj/: project.pbxproj
FileX/FileX/: FileX.h  a.out  functions.c  huff2.txt  main.c  poop.txt
FileX/FileX.xcodeproj/: project.pbxproj
FileZ/FileZ.xcodeproj/: project.pbxproj
bills/bills.xcodeproj/: project.pbxproj
bst/bst/: a.out  main.c
bst/bst.xcodeproj/: project.pbxproj
butty/butty/: File  a.out  main  main.c  noarg
butty/butty.xcodeproj/: project.pbxproj
butty/pyt/: marvinhelp.h
cachesim/cachesim/: a.out  main.c
cachesim/cachesim.xcodeproj/: project.pbxproj
catch/catch/: a.out  main.c  poop.txt  yeet.txt
catch/catch.xcodeproj/: project.pbxproj
csvfile/csvfile/: cities  firstname.txt  lane.txt  lastnames.txt  main.c  new.txt  street.txt
csvfile/csvfile.xcodeproj/: project.pbxproj
dateBBD/dateBBD/: all.txt  bar.txt  close.txt  main.c  open.txt  time.txt
dateBBD/dateBBD.xcodeproj/: project.pbxproj
hask/: Main.hs  Project1.hs  Project2.hs  Project3.hs  Project4.hs  RegX.hs  _Main.hsplay  _Project1.hsplay  _Project2.hsplay  _Project3.hsplay  _Project4.hsplay  hask.cabal
life/life/: a.out  main.c
life/life.xcodeproj/: project.pbxproj
list/list/: a.out  main.c  second.c  second.h
list/list.xcodeproj/: project.pbxproj
malloc/malloc/: ho.c  main.c  malloc.h
malloc/malloc.xcodeproj/: project.pbxproj
marvinhelp3/marvinhelp3/: a.out  main.c
marvinhelp3/marvinhelp3.xcodeproj/: project.pbxproj
(+152 files in other folders)
